# prompt-qa-lab

./: .gitignore  CHANGELOG.md  PROJECT_STATUS.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: pqalab-ci.yml  tests.yml
demo/: README.md  diff.txt  report-baseline.json  report-regressed.json  run_demo.sh
docs/: CONTRIBUTING.md
examples/: cases.json
prompt_qalab/: cli.py
src/: pqalab.py
tests/: test_smoke.py
